chore(actions): 更新 GH_TOKEN 密钥名称

--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Publish with Lerna
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-          GH_TOKEN: ${{secrets.COMMIT_TOKEN}}
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
         run: |
          pnpm ci:version
          pnpm ci:publish
