--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -24,5 +24,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
           GH_TOKEN: ${{secrets.COMMIT_TOKEN}}
         run: |
-         pnpm ci:version
+         GH_TOKEN=${{secrets.COMMIT_TOKEN}} pnpm ci:version
          pnpm ci:publish
