--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -1,4 +1,4 @@
-name: publish node package
+name: release new version
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
           GH_TOKEN: ${{secrets.COMMIT_TOKEN}}
         run: |
-         GH_TOKEN=${{secrets.COMMIT_TOKEN}} pnpm ci:version
+         pnpm ci:version
          pnpm ci:publish
