--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "readue",
 	"version": "0.0.0",
-	"description": "",
+	"description": "README 生成器。",
 	"main": "./lib/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
