--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/lexmin0412/readue.git"
+	},
 	"files": [
 		"es",
 		"lib"
