--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "lexmin0412 <zhangle_dev@outlook.com>",
 	"license": "ISC",
 	"devDependencies": {
+		"@eat-fish/changelog": "^1.0.5",
 		"@types/node": "^20.12.7",
 		"lerna": "^8.1.2",
 		"rimraf": "^5.0.5",
