--- a/.github/workflows/npmPublish.yml
+++ b/.github/workflows/npmPublish.yml
@@ -16,7 +16,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: git config --global user.email ${{secrets.USER_EMAIL}}
       - run: git config --global user.name ${{secrets.USER_NAME}}
-      - run: npm install pnpm -g
+      - run: npm install pnpm@8 -g
       - run: pnpm install
       - run: pnpm build
       - name: Publish with Lerna
