feat(packages): 新增 @readue/api 包, 承接 cli 中原本的 generate 部分功能

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
 	"jsnext:main": "./es/index.js",
 	"module": "./es/index.js",
 	"dependencies": {
+		"@readue/api": "workspace:*",
 		"@toolkit-fe/request": "^0.1.22"
 	}
 }
