chore: 统一子包描述信息风格

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@readue/api",
   "version": "0.1.0",
-  "description": "Readue 的 Node API",
+  "description": "Readue Node API",
   "keywords": [
     "readue"
   ],
