--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@readue/cli",
 	"version": "0.1.0",
-	"description": "命令行接口",
+	"description": "Readue 命令行接口",
 	"bin": {
 		"readue": "./bin/readue.js",
 		"ru": "./bin/readue.js"
