--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,7 +18,8 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "https://registry.npmmirror.com/"
+		"access": "public",
+		"registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
