refactor(packages/cli): 部分配置相关模块改为从 `@readue/config` 包中导入

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
 	"module": "./es/index.js",
 	"dependencies": {
 		"@readue/api": "workspace:*",
+		"@readue/config": "workspace:*",
 		"@toolkit-fe/request": "^0.1.22"
 	}
 }
