chore: 新增 new:pkg script, 在全局 lerna 不存在时提供快捷创建子包功能

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "README 生成器。",
   "main": "./lib/index.js",
   "scripts": {
+		"new:pkg": "lerna create",
 		"test:self": "pnpm build && readue",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm --filter=@readue/* run build",
