--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "pnpm --filter=@readue/* run build",
     "dev:app": "pnpm --filter=@readue/app run dev",
+		"dev:docs": "pnpm --filter=@readue/docs run dev",
     "ts": "ts-node src/",
     "ci:version": "lerna version patch --yes --conventional-commits",
     "ci:publish": "lerna publish from-package --yes"
