--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@readue/cli",
 	"version": "0.3.4",
-	"description": "Readue 命令行接口",
+	"description": "Readue 命令行接口。",
 	"bin": {
 		"readue": "./bin/readue.js",
 		"ru": "./bin/readue.js"
@@ -42,6 +42,7 @@
 		"url": "https://github.com/lexmin0412/readu/issues"
 	},
 	"devDependencies": {
+		"@types/figlet": "^1.5.8",
 		"@types/node": "^20.12.7",
 		"rimraf": "^5.0.5",
 		"ts-node": "^10.9.2",
@@ -53,6 +54,9 @@
 	"dependencies": {
 		"@readue/api": "workspace:*",
 		"@readue/config": "workspace:*",
-		"@toolkit-fe/request": "^0.1.22"
+		"@toolkit-fe/request": "^0.1.22",
+		"commander": "^12.0.0",
+		"figlet": "^1.7.0",
+		"picocolors": "^1.0.0"
 	}
 }
