feat(cli): 支持一键创建插件包

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
 	"jsnext:main": "./es/index.js",
 	"module": "./es/index.js",
 	"dependencies": {
+		"@lexmin0412/tpc": "^2.3.0",
 		"@readue/api": "workspace:*",
 		"@readue/config": "workspace:*",
 		"@toolkit-fe/request": "^0.1.22",
