--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,7 +43,9 @@
 	},
 	"devDependencies": {
 		"@types/figlet": "^1.5.8",
+		"@types/inquirer": "8.x",
 		"@types/node": "^20.12.7",
+		"inquirer": "8.x",
 		"rimraf": "^5.0.5",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
@@ -58,6 +60,7 @@
 		"@toolkit-fe/request": "^0.1.22",
 		"commander": "^12.0.0",
 		"figlet": "^1.7.0",
-		"picocolors": "^1.0.0"
+		"picocolors": "^1.0.0",
+		"prettier": "^3.2.5"
 	}
 }
