--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -44,5 +44,8 @@
   },
   "types": "./lib/index.d.ts",
   "jsnext:main": "./es/index.js",
-  "module": "./es/index.js"
+  "module": "./es/index.js",
+  "dependencies": {
+    "cosmiconfig": "^9.0.0"
+  }
 }
